--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- 
+ *  Copyright (c) 2011 by Twilio, Inc., all rights reserved.
+ *
+ *  Use of this software is subject to the terms and conditions of 
+ *  the Twilio Terms of Service located at http://www.twilio.com/legal/tos
+ -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.twilio.example.hellomonkey"
+  package="com.twilio.phone"
   android:versionCode="1"
   android:versionName="1.0">
 
@@ -17,7 +23,7 @@
       android:label="@string/app_name">
         <activity
           android:label="@string/app_name"
-          android:name="com.twilio.TwilioDialer"
+          android:name="com.twilio.phone.TwilioDialer"
           android:screenOrientation="portrait">
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
