--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 
+<!--
  *  Copyright (c) 2011 by Twilio, Inc., all rights reserved.
  *
  *  Use of this software is subject to the terms and conditions of 
  *  the Twilio Terms of Service located at http://www.twilio.com/legal/tos
- -->
+-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.twilio.phone"
-  android:versionCode="1"
-  android:versionName="1.0">
+    package="com.twilio.phone"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8" />
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="8" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
@@ -19,22 +21,27 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
-      android:icon="@drawable/ic_launcher"
-      android:label="@string/app_name">
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name" >
         <activity
-          android:label="@string/app_name"
-          android:name="com.twilio.phone.TwilioDialer"
-          android:screenOrientation="portrait">
-            <intent-filter >
+            android:name=".TwilioDialer"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <service
-          android:name="com.twilio.client.TwilioClientService"
-          android:exported="false" />
+            android:name="com.twilio.client.TwilioClientService"
+            android:exported="false" />
 
+        <activity
+            android:name=".CustomListActivity"
+            android:label="@string/title_activity_custom_list" >
+        </activity>
     </application>
 
 </manifest>
